--- a/client/src/components/Header/style.css
+++ b/client/src/components/Header/style.css
@@ -1,3 +1,7 @@
+.header-container {
+    height: 100px
+}
+
 .topnav {
     padding-right: 50px;
     padding-top: 20px;
@@ -9,4 +13,5 @@
 
 .title {
     padding-left: 30px;
+    padding-top: 27px;
 }
