fixed 80% width formatting, adjusted profile page spacing and form submission

--- a/client/src/components/PostForm/style.css
+++ b/client/src/components/PostForm/style.css
@@ -1,4 +1,9 @@
-.card-header {
+form {
+    padding-left: 190px;
+    display: flex;
+}
+
+.post-form {
     height: 100%;
     width: 100%;
     display: flex;
