--- a/client/src/pages/assets/Home.css
+++ b/client/src/pages/assets/Home.css
@@ -25,3 +25,17 @@
     justify-content: center;
     align-items: center;
 }
+
+.pow-box {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.video {
+    position: static;
+    margin: auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
