--- a/client/src/pages/assets/Home.css
+++ b/client/src/pages/assets/Home.css
@@ -39,3 +39,23 @@
     align-items: center;
     justify-content: center;
 }
+
+
+@media screen and (max-width: 480px) {
+    .topnav {
+      padding-right: 20px !important;
+  }
+  }
+  
+  @media screen and (max-width: 768px) {
+
+  }
+  
+  @media screen and (max-width: 1024px) {
+
+  }
+  
+  @media screen and (max-width: 1200px) {
+
+  }
+  
